wordpress/wordpress-deploy-persistent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  generation: 1
  labels:
    run: blog
  name: wordpress
  namespace:
spec:
  replicas: 1
  selector:
    matchLabels:
      run: blog
  template:
    metadata:
      labels:
        run: blog
    spec:
      containers:
      - image: bitnami/wordpress:latest
        imagePullPolicy: Always
        name: wordpress
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 120
          timeoutSeconds: 20
          periodSeconds: 10
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 60
          timeoutSeconds: 20
          periodSeconds: 10
          failureThreshold: 3
        volumeMounts:
        - name: installation-files
          mountPath: "/bitnami/wordpress"
        securityContext:
          runAsUser: 0
      terminationGracePeriodSeconds: 10
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
      - name: installation-files
        persistentVolumeClaim:
          claimName: wordpress-pvc
