wordpress/mariadb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  labels:
spec:
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
  selector:
    run: mariadb
