wordpress/wordpress-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: blog
  annotations:
    kubernetes.io/ingress.class: "haproxy"
spec:
  rules:
  - host: wordpress.kube.noverit.com
    http:
      paths:
      - path: /
        backend:
          serviceName: wordpress
          servicePort: 80
